<resources>
    <string name="app_name">psmart</string>
    <string name="title_activity_card_reader">CardReaderActivity</string>
    <string name="error_auth_failed">Authentication Failed.</string>
    <string name="main_Message">Welcome to PSmart!\n Access is limited to verified HTS applications.</string>
    <!--  Bluetooth strings   -->
    <string name="ble_not_supported">BLE is not supported.</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <!-- Connection status -->
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="connect_fail">Fail to connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="disconnect_fail">Fail to disconnect</string>

    <!-- Menu items -->
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!--card reader buttons-->
    <string name="read_Card">Read Card</string>
    <string name="write_Card">Write Card</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="new_devices">New Devices</string>
    <string name="scanning_for_devices">Scanning for devices \n Ensure Bluetooth Reader is powered on</string>

</resources>
