<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title=""/>
    <item
        android:id="@+id/menu_disconnect"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/disconnect">
    </item>
    <item
        android:id="@+id/menu_connecting"
        android:orderInCategory="101"
        app:showAsAction="ifRoom|withText"
        android:title="@string/connecting">
    </item>
    <item
        android:id="@+id/menu_connect"
        android:orderInCategory="102"
        app:showAsAction="ifRoom|withText"
        android:title="@string/connect">
    </item>

</menu>